--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,7 +5,8 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
-@import "functions";
+ @import "functions";
+ @import "colorVariables";
 @import "variables";
 @import "mixins";
 @import "root";
@@ -199,3 +200,8 @@
     object-fit: contain; height: 100%; width: 100%;
   }
   
+  .testimonial-hero, .testimonial-hero img {
+      width: 365px;
+      height: 500px;
+      
+  }
