--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,7 +4,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:300,400,500,700&display=swap');
  @import "functions";
  @import "colorVariables";
 @import "variables";
@@ -204,4 +204,35 @@
       width: 365px;
       height: 500px;
       
+  }
+
+  footer {
+
+    .brand-tagline {
+      margin-top: 8px;
+      color: $gray-500;
+      font-weight: 300;
+    }
+    border-top: 1px solid $gray-200;
+    padding-top: 50px;
+    
+    .list-group-item {    
+        padding: 0.3125rem 0;
+        border: 0;
+        a, span {
+          color: $gray-500;
+          font-weight: 300;
+        }
+        a {
+          @include hover-focus {
+            color: $gray-800;
+          }
+        }
+    }
+    
+    .copyrights {
+      margin: 50px 0;
+      font-weight: 300;      
+      color: $gray-500;
+    }
   }
