--- a/src/assets/scss/_colorVariables.scss
+++ b/src/assets/scss/_colorVariables.scss
@@ -15,8 +15,8 @@ $indigo:  #3252DF !default;
 $purple:  #6f42c1 !default;
 $pink:    #FF498B !default;
 $red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
+$orange:  #E74C3C !default;
 $yellow:  #ffcc47 !default;
 $green:   #28a745 !default;
-$teal:    #20c997 !default;
+$teal:    #1ABC9C !default;
 $cyan:    #17a2b8 !default;
