--- a/src/assets/scss/_colorVariables.scss
+++ b/src/assets/scss/_colorVariables.scss
@@ -14,7 +14,7 @@ $blue:    #007bff !default;
 $indigo:  #3252DF !default;
 $purple:  #6f42c1 !default;
 $pink:    #FF498B !default;
-$red:     #dc3545 !default;
+$red:     #e74c3c !default;
 $orange:  #E74C3C !default;
 $yellow:  #ffcc47 !default;
 $green:   #28a745 !default;
