--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -94,8 +94,10 @@
   }
 
   .card {
-    height: 100%;
-
+    &.bordered {
+      border: 1px solid $gray-200;
+    }    
+    border-radius:25px;
     .tag {
       z-index: 3;
       font-size: 0.875rem;
@@ -133,8 +135,7 @@
     &.card-featured {
       overflow: hidden;
       cursor: pointer;
-      height: 100%;
-      border-radius:25px;
+      height: 100%;    
       &:after {
         position: absolute;
         content: "";
@@ -234,5 +235,11 @@
       margin: 50px 0;
       font-weight: 300;      
       color: $gray-500;
+    }
+  }
+  main {
+    p {
+      color: $gray-500;
+      font-weight: 300;
     }
   }
